<resources>
    <string name="app_name">ShoNa</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chooseCatDes">Please choose a product category</string>
    <string name="LV1CateBut1">Beverage</string>
    <string name="LV1CateBut2">Food</string>
    <string name="LV1CateBut3">Snacks</string>
    <string name="LV1CateBut4">Health &amp; Beauty</string>
    <string name="LV1CateBut5">Household Product</string>
    <string name="LV1CateBut6">Car Care</string>
    <string name="LV1CateBut7">Pet Care</string>
    <string name="LV1CateBut8">Promotion</string>
    <string name="title_activity_lv2__bev">Beverage</string>
    <string name="LV2CateBut1">Alcoholic</string>
    <string name="LV2CateBut2">Non-Alcoholic</string>
    <string name="title_activity_lv2__food">Foods</string>
    <string name="LV2CateBut3">Fresh Foods</string>
    <string name="LV2CateBut4">Frozen Foods</string>
    <string name="LV2CateBut5">Package Foods</string>
    <string name="LV2CateBut6">Cooking Ingredients</string>
    <string name="LV2CateBut7">Bakery</string>
    <string name="LV2CateBut8">Eggs &amp; Dairy</string>
    <string name="title_activity_lv2__snack">Snacks</string>
    <string name="LV2CateBut9">Confectionery</string>
    <string name="LV2CateBut10">Chips</string>
    <string name="LV2CateBut11">Bars</string>
    <string name="LV2CateBut12">Biscuits/Crackers</string>
    <string name="LV2CateBut13">Cookies</string>
    <string name="title_activity_lv2_hb">Health &amp; Beauty</string>
    <string name="LV2CateBut14">Body Care</string>
    <string name="LV2CateBut15">Facial Care</string>
    <string name="LV2CateBut16">Hair Care</string>
    <string name="LV2CateBut17">Dental Care</string>
    <string name="LV2CateBut18">Men Care</string>
    <string name="LV2CateBut19">Women Care</string>
    <string name="LV2CateBut20">Cosmetics</string>
    <string name="LV2CateBut21">First Aid</string>
    <string name="title_activity_lv2_hp">Household Products</string>
    <string name="LV2CateBut22">Paper Products</string>
    <string name="LV2CateBut23">Kitchen Essentials</string>
    <string name="LV2CateBut24">Pest Control</string>
    <string name="LV2CateBut25">Laundry</string>
    <string name="LV2CateBut26">Dish Detergent</string>
    <string name="LV2CateBut27">Household Cleaners</string>
    <string name="LV2CateBut28">Cleaning Supply</string>
    <string name="LV2CateBut29">Miscellaneous</string>
    <string name="title_activity_lv2_cc">Car Care</string>
    <string name="LV2CateBut30">Car Care</string>
    <string name="LV2CateBut31">Air Freshener</string>
    <string name="title_activity_lv2_pc">Pet Care</string>
    <string name="LV2CateBut32">Pet Food</string>
    <string name="LV2CateBut33">Pet Cleaning</string>
    <string name="LV2CateBut34">Pet Accessories</string>
    <string name="title_activity_lv2_pro">Promotion</string>
    <string name="title_activity_lv3_al">Alcoholic Beverage</string>
    <string name="LV3CateBut1">Spirit</string>
    <string name="LV3CateBut2">White Wine</string>
    <string name="LV3CateBut3">Red Wine</string>
    <string name="LV3CateBut4">Rose Wine</string>
    <string name="LV3CateBut5">Champagne/Sparkling Wine</string>
    <string name="LV3CateBut6">Asian Rice Wine</string>
    <string name="LV3CateBut7">Coolers/Mixed/Mixer</string>
    <string name="LV3CateBut8">Beer</string>
    <string name="LV3CateBut9">Accessories</string>
    <string name="title_activity_lv3_nal">Non-Alcoholic Beverage</string>
    <string name="LV3CateBut10">Milk</string>
    <string name="LV3CateBut11">Health &amp; Beauty Drinks/Supplements</string>
    <string name="LV3CateBut12">Energy &amp; Sport Drinks</string>
    <string name="LV3CateBut13">Soft Drinks</string>
    <string name="LV3CateBut14">Fruit Juice</string>
    <string name="LV3CateBut15">Water</string>
    <string name="LV3CateBut16">Coffee</string>
    <string name="LV3CateBut17">Coffee Creamers</string>
    <string name="LV3CateBut18">Tea</string>
    <string name="LV3CateBut19">Powder Health Tonics</string>
    <string name="title_activity_food_lv3fresh">Fresh Foods</string>
    <string name="LV3CateBut20">Vegetables</string>
    <string name="LV3CateBut21">Meat &amp; Poultry</string>
    <string name="LV3CateBut22">Seafood</string>
    <string name="LV3CateBut23">Prepared Foods</string>
    <string name="LV3CateBut24">Fruits</string>
    <string name="title_activity_food_lv3frozen">Frozen Foods</string>
    <string name="title_activity_food_lv3pack">Package Foods</string>
    <string name="LV3CateBut25">Instant Noodles</string>
    <string name="LV3CateBut26">Instant Soup</string>
    <string name="LV3CateBut27">Canned Foods</string>
    <string name="LV3CateBut28">Dried/Processed Foods</string>
    <string name="LV3CateBut29">Cereal</string>
    <string name="title_activity_food_lv3ci">Cooking Ingredients</string>
    <string name="LV3CateBut30">Rice</string>
    <string name="LV3CateBut31">Noodles &amp; Pasta</string>
    <string name="LV3CateBut32">Sauce</string>
    <string name="LV3CateBut33">Sugar &amp; Sweeteners</string>
    <string name="LV3CateBut34">Seasoning &amp; Spices</string>
    <string name="LV3CateBut35">Baking</string>
    <string name="LV3CateBut36">Oils</string>
    <string name="title_activity_food_lv3bake">Bakery</string>
    <string name="LV3CateBut37">Breads</string>
    <string name="LV3CateBut38">Cake</string>
    <string name="title_activity_food_lv3dairy">Eggs &amp; Dairy</string>
    <string name="LV3CateBut39">Jams</string>
    <string name="LV3CateBut40">Peanut Butter</string>
    <string name="LV3CateBut41">Honey</string>
    <string name="LV3CateBut42">Chocolate Spreads</string>
    <string name="LV3CateBut43">Other Spreads</string>
    <string name="LV3CateBut44">Eggs</string>
    <string name="LV3CateBut45">Butter &amp; Magarine</string>
    <string name="LV3CateBut46">Cheese</string>
    <string name="LV3CateBut47">Yogurt</string>
    <string name="title_activity_hb_lv3bc">Body Care</string>
    <string name="LV3CateBut48">Soap</string>
    <string name="LV3CateBut49">Body Lotion</string>
    <string name="LV3CateBut50">Body Mask</string>
    <string name="LV3CateBut51">Body Hair Remover</string>
    <string name="LV3CateBut52">Sunscreen</string>
    <string name="LV3CateBut53">Deodorant</string>
    <string name="LV3CateBut54">Cologne</string>
    <string name="LV3CateBut55">Talcum Powder</string>
    <string name="LV3CateBut56">Cotton</string>
    <string name="LV3CateBut57">Shaving</string>
    <string name="title_activity_hb_lv3fc">Facial Care</string>
    <string name="LV3CateBut58">Facial Cleanser</string>
    <string name="LV3CateBut59">Facial Moisturizers</string>
    <string name="LV3CateBut60">Special Treatment</string>
    <string name="LV3CateBut61">Facial Sunscreen</string>
    <string name="LV3CateBut62">Facial Blotters</string>
    <string name="title_activity_hb_lv3hc">Hair Care</string>
    <string name="LV3CateBut63">Shampoo</string>
    <string name="LV3CateBut64">Conditioners</string>
    <string name="LV3CateBut65">Hair Treatments</string>
    <string name="LV3CateBut66">Hair Styling</string>
    <string name="LV3CateBut67">Hair Coloring</string>
    <string name="title_activity_hb_lv3dc">Dental Care</string>
    <string name="LV3CateBut68">Toothpaste</string>
    <string name="LV3CateBut69">Toothbrushes</string>
    <string name="LV3CateBut70">Mouthwash</string>
    <string name="title_activity_hb_lv3mc">Men Care</string>
    <string name="LV3CateBut71">Body Care</string>
    <string name="LV3CateBut72">Lubricant &amp; Condoms</string>
    <string name="title_activity_hb_lv3wc">Women Care</string>
    <string name="LV3CateBut73">Sanitary Protection</string>
    <string name="LV3CateBut74">Pantry Liners</string>
    <string name="LV3CateBut75">Feminine Wash</string>
    <string name="title_activity_hb_lv3co">Cosmetics</string>
    <string name="LV3CateBut76">Makeup</string>
    <string name="LV3CateBut77">Makeup Remover</string>
    <string name="LV3CateBut78">Makeup Accessories</string>
    <string name="LV3CateBut79">Nail Polish &amp; Treatment</string>
    <string name="title_activity_hb_lv3fa">First Aid</string>
    <string name="LV3CateBut80">Bandages</string>
    <string name="LV3CateBut81">First Aid Kits</string>
    <string name="title_activity_cc_lv3aif">Air Fresheners</string>
    <string name="LV3CateBut145">Car Shampoos</string>
    <string name="LV3CateBut146">Car Waxes</string>
    <string name="LV3CateBut147">Car Care</string>
    <string name="title_activity_cc_lv3car">Car Care</string>
    <string name="LV3CateBut156">Car Air Fresheners</string>
    <string name="LV3CateBut155">Continuous Air Fresheners</string>
    <string name="LV3CateBut154">Aerosol Air Fresheners</string>
    <string name="LV3CateBut153">Air Deodorizer Blocks</string>
    <string name="LV3CateBut148">Tire &amp; Chrome Cleaners</string>
    <string name="LV3CateBut149">Motor Oil</string>
    <string name="LV3CateBut150">Engine Coolant</string>
    <string name="LV3CateBut151">Wiper Washer Fluid</string>
    <string name="LV3CateBut152">Car Accessories</string>
    <string name="title_activity_hb_lv3pp">Paper Product</string>
    <string name="LV3CateBut82">Toilet Seat Cover</string>
    <string name="LV3CateBut83">Facial Tissue</string>
    <string name="LV3CateBut84">Moist Wipes</string>
    <string name="LV3CateBut85">Kitchen Towels</string>
    <string name="LV3CateBut86">Cocktail Napkins</string>
    <string name="LV3CateBut87">Toilet Tissue</string>
    <string name="title_activity_hb_lv3ke">Kitchen Essentials</string>
    <string name="LV3CateBut88">Utensils</string>
    <string name="LV3CateBut89">Disposable Ware</string>
    <string name="LV3CateBut90">Food Containers</string>
    <string name="LV3CateBut91">Food Wraps</string>
    <string name="LV3CateBut92">Party Supplies</string>
    <string name="title_activity_hb_lv3pc">Pest Control</string>
    <string name="LV3CateBut93">Insecticide</string>
    <string name="LV3CateBut94">Insecticide Devices</string>
    <string name="LV3CateBut95">Rodent Control</string>
    <string name="LV3CateBut96">Insect Repellents</string>
    <string name="title_activity_hb_lv3la">Laundry</string>
    <string name="LV3CateBut97">Powder Detergent</string>
    <string name="LV3CateBut98">Liquid Detergent</string>
    <string name="LV3CateBut99">Fabric Softeners</string>
    <string name="LV3CateBut100">Bleach</string>
    <string name="LV3CateBut101">Spray Starch</string>
    <string name="LV3CateBut102">Stain Removers</string>
    <string name="LV3CateBut103">Static Spray</string>
    <string name="title_activity_hb_lv3dd">Dish Detergent</string>
    <string name="LV3CateBut104">Liquid Dish Detergent</string>
    <string name="LV3CateBut105">Baby Dish Detergent</string>
    <string name="LV3CateBut106">Powder Dish Detergent</string>
    <string name="LV3CateBut107">Fruit &amp; Vegetable Wash</string>
    <string name="LV3CateBut108">Auto Dish Washing Detergent</string>
    <string name="title_activity_hb_lv3hoc">Household Cleaners</string>
    <string name="LV3CateBut109">Kitchen Cleaners</string>
    <string name="LV3CateBut110">Bathroom Cleaners</string>
    <string name="LV3CateBut111">Toilet Bowl Cleaners</string>
    <string name="LV3CateBut112">Drain Openers</string>
    <string name="LV3CateBut113">In-Tank &amp; Rim Blocks</string>
    <string name="LV3CateBut120">Scouring Pads</string>
    <string name="LV3CateBut121">Sponges</string>
    <string name="LV3CateBut122">Scrub Brushes</string>
    <string name="LV3CateBut124">Brooms</string>
    <string name="LV3CateBut125">Mops</string>
    <string name="LV3CateBut126">Feather Dusters</string>
    <string name="LV3CateBut127">Plastic Bags</string>
    <string name="LV3CateBut128">Garbage Bags</string>
    <string name="LV3CateBut129">Garbage Cans</string>
</resources>