<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shona.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/chooseCatDes"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/LV1CateBut1" /><Button android:id="@+id/button6" android:layout_width="match_parent" android:layout_height="60dp" android:text="@string/LV1CateBut6" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/LV1CateBut2" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/LV1CateBut4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/LV1CateBut5" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/LV1CateBut7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/LV1CateBut8" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/LV1CateBut3" />

    </LinearLayout>

</RelativeLayout>