<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shona.LV2HPActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/chooseCatDes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:text="@string/LV2CateBut22" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="30dp"
        android:text="@string/LV2CateBut24" />

    <Button
        android:id="@+id/button5"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="28dp"
        android:text="@string/LV2CateBut26" />

    <Button
        android:id="@+id/button7"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignRight="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginTop="30dp"
        android:text="@string/LV2CateBut28" />

    <Button
        android:id="@+id/button8"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/button7"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignLeft="@+id/button6"
        android:text="@string/LV2CateBut29" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/LV2CateBut23" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_above="@+id/button5"
        android:layout_alignLeft="@+id/button2"
        android:text="@string/LV2CateBut25" />

    <Button
        android:id="@+id/button6"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_above="@+id/button7"
        android:layout_alignLeft="@+id/button4"
        android:text="@string/LV2CateBut27" />
</RelativeLayout>
