<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shona.LV2SnackActivity" >

     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/chooseCatDes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textView1"
         android:orientation="vertical" >

         <Button
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="@string/LV2CateBut11" />

         <Button
             android:id="@+id/button4"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="@string/LV2CateBut12" />

         <Button
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="@string/LV2CateBut10" />

         <Button
             android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="@string/LV2CateBut9" />

         <Button
             android:id="@+id/button5"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="@string/LV2CateBut13" />

     </LinearLayout>

</RelativeLayout>
